blocks/form/form.css
/* ... */
* {
    box-sizing: border-box;
}

main .form pre {
    display: none;
}

form output {
    display: block;
    font-weight: 700;
    font-size: 1.625rem;
}

form:not(.edit-mode) [data-visible="false"] {
    display: none !important;
}

main .form-container {
    background-color: var(--form-background-color);
    padding: var(--form-padding);
    width: var(--form-width);
    overflow: visible;
}


main .form {
    background-color: var(--form-background-color);
}

main .form a:any-link {
    color: var(--color-blue);
}

main .footer-subscription-form > div {
    max-width: var(--section-width);
    width: 100%;
    padding: 2rem 1.5rem;
}

main .form > div:not(:first-child) {
    display: none;
}

main .form form {
    display: flex;
    flex-wrap: wrap;
    grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
    gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
    outline: none;
}

@media (min-width: 600px) {
    main .form form {
        display: grid;
    }
}

main .form form fieldset {
    border: var(--form-fieldset-border);
    margin: var(--form-fieldset-marign);
    width: 100%;
}

main .form form fieldset fieldset {
    padding: 0;
}

main .form .field-description {
    color: var(--form-label-color);
    font-size: var(--form-font-size-xxs);
}

main .form form .field-invalid .field-description {
    color: var(--form-error-color);
}

main .form input,
main .form textarea,
main .form select {
    background-color: var(--form-input-background-color);
    border-radius: 4px;
    border: var(--form-input-border-size) solid var(--form-input-border-color);
    width: 100%;
    height: 48px;
    color: var(--color-text-primary);
    padding: var(--form-input-padding);
    font-size: var(--form-input-font-size);
    max-width: unset;
    margin-top: .5rem;
    margin-bottom: .25rem;
}

main .form .field-wrapper textarea {
    resize: none;
    min-height: 100px;
}

main .form select {
  padding-top: 0;
  padding-bottom: 0;
}

main .form input[type='file'] {
    border: none;
    padding-inline-start:0;
    background: unset;
    color: unset;
}

main .form input[type="checkbox"] {
    appearance: none;
    margin: .25rem;
    padding: .4rem;
    width: 1rem;
    height: 1rem;
    border-radius: 4px;
    background-color: var(--color-bg-secondary);
    border: 1px solid var(--color-primary-1);
    position: relative;
    cursor: pointer;
    transition: background 0.3s ease;
}

main .form input[type="checkbox"]:checked::after {
    content: '';
    position: absolute;
    top: 1px;
    left: 5px;
    transform: rotate(45deg);
    display: inline-block;
    height: 10px;
    width: 4px;
    border-bottom: 1px solid var(--color-primary-1);
    border-right: 1px solid var(--color-primary-1);
}

main .form input[type="checkbox"]:focus {
  outline: none;
}

main .form input[type="checkbox"]:disabled {
    background-color: var(--color-white);
    border: 1px solid var(--color-disabled) !important;
    cursor: not-allowed;
}

main .form input[type="checkbox"]:disabled::after {
    border-bottom: 1px solid var(--color-disabled);
    border-right: 1px solid var(--color-disabled);
}

main .form input[type="checkbox"]:focus-visible::after {
    border-bottom: 1px solid var(--color-primary-1);
    border-right: 1px solid var(--color-primary-1);
}

main .form input[type="checkbox"]:focus-visible {
    background-color: var(--color-bg-secondary);
    outline: 2px solid var(--color-primary-1);
    outline-offset: 0;
}

main .form input[type="checkbox"]:focus-visible:hover {
    background-color:  var(--color-primary-1);
}

main .form input[type="checkbox"]:hover:focus-visible::after {
    border-bottom: 1px solid var(--color-white);
    border-right: 1px solid var(--color-white);
}

main .form input[type="checkbox"]:disabled:hover::after {
    border-bottom: 1px solid var(--color-disabled);
    border-right: 1px solid var(--color-disabled);
}

main .form input[type="radio"] {
    appearance: none;
    width: 1rem;
    height: 1rem;
    border-radius: 50%;
    border: 1.5px solid var(--color-primary-1);
    margin-right: .5rem;
    padding: 0;
    position: relative;
}

main .form input[type="radio"]:focus {
    outline: none;
}

main .form input[type="radio"]:focus-visible {
    border: 2px solid var(--color-primary-1);
    outline: none;
}

main .form input[type="radio"]:checked {
    background-color: var(--color-white);
}

main .form input[type="radio"]:disabled {
    border: 2px solid var(--color-disabled) !important;
    cursor: not-allowed;
}

main .form input[type="radio"]:checked::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background-color: var(--color-primary-1);
}

main .form input[type="radio"]:disabled::before {
    background-color: var(--color-disabled);
}

main .form fieldset legend {
    font-weight: var(--form-fieldset-legend-font-weight);
    font-size: var(--form-fieldset-legend-font-size);
    color: var(--form-fieldset-legend-color);
    border-bottom: var(--form-fieldset-legend-border);
    width: 100%;
    padding: var(--form-fieldset-legend-padding);
    margin-bottom: 10px;
}

main .form label {
    color: var(--color-dark-gray);
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 160%;
    letter-spacing: 0.14px;
}

main .form label.required::after {
    content: "*";
    color: var(--color-disabled);
    padding-inline-start: 5px;
}

main .form form p,
main .form form .repeat-wrapper,
main .form form .field-wrapper {
    margin: var(--form-field-gap);
    color: var(--form-label-color);
    width: 100%;
    grid-column: span 12;
}

main .form form p {
    font-size: var(--form-paragraph-font-size);
    font-style: var(--form-paragraph-font-style);
    color: var(--form-paragraph-color);
    margin: var(--form-paragraph-margin);
}
/* ... */

